--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     
                 	<p class="img3 animated fadeIn1">02-27261680#71<br> 台北市信義區松德路171號6樓</p>
                     <div class="fb-like animated fadeIn2" data-href="https://www.facebook.com/digital012" data-width="200" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-                    <p class="img4 animated fadeIn2">歡迎各路好手加入~</p>
+                    <p class="img4 animated fadeIn2">歡迎加入我們~</p>
 				</div>
 			</div>  
 			
